# ObsidianBootloader

./: .gitignore  README.md  Sconstruct  bochs_config  debug  debug.gdb  mkdisk  requirements.txt  run  setupenv  sfdisk_parts_ext2
src/boot/: boot.asm
src/lib/: bios.asm
src/stage1/: diskutils.asm  gdt_def.asm  linker.ld  print.asm  stage1.asm
src/stage2/: .gitignore  Cargo.toml  Makefile  SECTIONS  build.rs  linker.ld  log.txt  main.asm  my_lib  x86-unknown-bare_metal.json
src/stage2/asm/: cpuid.asm  io.asm  paging.asm
src/stage2/src/: arith.rs  bios.rs  cpu_extensions.rs  e9.rs  elf.rs  fs.rs  gdt.rs  gpt.rs  io.rs  lib.rs  mem.rs  obsiboot.rs  paging.rs  vesa.rs  video.rs
