[package]
name = "stage2"
version = "0.1.0"
authors = ["AilPhaune"]
edition = "2021"
build = "build.rs"

[build-dependencies]

[features]
default = []

[profile.dev]
panic = "abort"
opt-level = 1

debug = true
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release]
panic = "abort"
opt-level = "z"
overflow-checks = false
debug-assertions = false
debug = true

[package.metadata.cargo-xbuild.default-target]
i686-unknown-none = true

[package.metadata]
rustflags = ["-C", "link-args=-Tlinker.ld"]
