[lib]
name = "stage2"
edition = "2021"
crate-type = ["staticlib"]

[package]
name = "stage2"
version = "0.1.0"
authors = ["AilPhaune"]
edition = "2021"
build = "build.rs"

[dependencies]
kformat_default_nostd = { git = "https://github.com/AilPhaune/kformat_macros.git", package = "kformat_default_nostd" }
kformat_macros = { git = "https://github.com/AilPhaune/kformat_macros.git", package = "kformat_macros" }

[features]
default = []

[profile.dev]
panic = "abort"
opt-level = 1
debug = true
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release]
panic = "abort"
opt-level = "z"
overflow-checks = false
debug-assertions = false
debug = true

[package.metadata.cargo-xbuild.default-target]
i686-unknown-none = true

[package.metadata]
rustflags = ["-C", "linker-flavor=ld.lld", "-C", "link-args=-Tlinker.ld"]
